[project]
name = "qq_robot"
version = "0.1.0"
description = "qq_robot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_yuanshen_notice"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
